--- a/api/dias/models/dias.settings.json
+++ b/api/dias/models/dias.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "dias",
   "info": {
-    "name": "dias"
+    "name": "dias",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -12,16 +13,7 @@
   "pluginOptions": {},
   "attributes": {
     "nombre": {
-      "type": "enumeration",
-      "enum": [
-        "Lunes",
-        "Martes",
-        "Miercoles",
-        "Jueves",
-        "Viernes",
-        "Sabado",
-        "Domingo"
-      ]
+      "type": "string"
     }
   }
 }
