--- a/api/payments/models/payments.settings.json
+++ b/api/payments/models/payments.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "payments",
   "info": {
-    "name": "Payments"
+    "name": "Payments",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -18,6 +19,9 @@
     "user": {
       "plugin": "users-permissions",
       "model": "user"
+    },
+    "stripeId": {
+      "type": "string"
     }
   }
 }
