--- a/api/reuniones/models/reuniones.settings.json
+++ b/api/reuniones/models/reuniones.settings.json
@@ -26,6 +26,10 @@
     },
     "fecha": {
       "type": "date"
+    },
+    "user": {
+      "plugin": "users-permissions",
+      "model": "user"
     }
   }
 }
